# llvm-playground

./: .gitmodules  CMakeLists.txt  README.md  plan.md
00_hello_world/: CMakeLists.txt  HelloPass.cpp
01_clang_plugin/: CMakeLists.txt  ClangPlugin.cpp
02_code_modification/: BinaryEmbedder.cpp  BinaryEmbedder.h  CMakeLists.txt  PassPlugin.cpp
03_code_generation/: CMakeLists.txt  PassPlugin.cpp  Profiler.cpp  Profiler.hpp
samples/: CMakeLists.txt  annotations.c  benchmark.c
samples/HelloPassSample/: CMakeLists.txt  main.cpp  run.sh
samples/annotations/: .annotations.c.swp  CMakeLists.txt  annotations.c
samples/benchmark/: CMakeLists.txt  benchmark.c  profiler.c  profiler.cpp
samples/expanded_compilation/: add.c  run.sh
samples/ssa_phi/: run.sh  ssa_phi.c
